# detect-objects

./: Cargo.toml  README.md  index.html
src/: bbox.rs  constants.rs  detect.rs  detect_face.rs  inference_model.rs  main.rs  ml_model.rs
src/services/: detect.rs  face.rs  mod.rs
